# Flamingods

./: .gitignore  LICENSE  README.md
application/: AUDIO_INTEGRATION.md  package-lock.json  package.json  setup-audio.sh
application/public/: index.html
application/src/: App.js
application/src/components/Audio/: AudioContext.jsx  AudioDashboard.jsx  AudioLibrary.jsx  AudioPlaylists.jsx  AudioSearch.jsx  AudioSettings.jsx  AudioUpload.jsx  LibraryStats.jsx  PlaybackControls.jsx  PopularTracks.jsx  RecentTracks.jsx
application/src/components/DeviceManagement/: BulkControl.css  BulkControl.jsx  DeviceCard.css  DeviceCard.jsx  DeviceList.css  DeviceList.jsx
application/src/components/Layout/: Dashboard.css  Dashboard.jsx  Header.css  Header.jsx  LoadingOverlay.css  LoadingOverlay.jsx  Sidebar.css  Sidebar.jsx
application/src/components/StageControl/: StageButton.css  StageButton.jsx  StageControlPanel.css  StageControlPanel.jsx  StageStatus.css  StageStatus.jsx
application/src/components/SystemMonitor/: SystemStatus.css  SystemStatus.jsx
application/src/hooks/: useDeviceManagement.js  useStageControl.js  useSystemMonitor.js
application/src/services/: api.js  audioApi.js  deviceApi.js  stageApi.js  systemApi.js
application/src/styles/: App.css
esps/: OTA_README.md  discover_esps.py  ota_manager.py  upload_firmware.py
esps/button/: platformio.ini
esps/button/src/: main.cpp
esps/crown/: README.md  platformio.ini  test_endpoints.py  wiring_diagram.txt
esps/crown/include/: led_plans.h
esps/crown/src/: led_plans.cpp  main.cpp
esps/flamingo/: Makefile  README.md  platformio.ini  requirements.txt  test_patterns.py  wiring_diagram.txt
esps/flamingo/include/: led_plans.h
esps/flamingo/src/: led_plans.cpp  main.cpp
esps/stage/: Makefile  README.md  platformio.ini  test_endpoints.py
esps/stage/include/: led_plans.h
esps/stage/src/: led_plans.cpp  main.cpp
esps/station/: README.md  platformio.ini  station_config.h  wiring_diagram.txt
esps/station/src/: main.cpp
esps/station/station_config_examples/: station_1_config.h  station_2_config.h  station_3_config.h  station_4_config.h
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
raspberry/: AUDIO_SYSTEM.md  Makefile  README.md  SPECIFIC_IP_SCANNING.md  audio_endpoints.py  audio_manager.py  audio_models.py  config.py  env.example  main.py  models.py  pyproject.toml  sonoff_manager.py  test.py  test_audio.py  test_server.py  test_specific_scan.py  test_stage_endpoints.py  test_upload.py  websocket_manager.py
raspberry/music/playlists/: ambient.json
raspberry/react-audio-app/public/: index.html
raspberry/react-audio-app/src/: index.css
raspberry/react-audio-app/src/components/: Navbar.tsx  PlaybackControls.tsx  RecentTracks.tsx
raspberry/react-audio-app/src/contexts/: AudioContext.tsx
raspberry/react-audio-app/src/pages/: Dashboard.tsx  Playlists.tsx  Search.tsx  Settings.tsx
raspberry/react-audio-app/src/services/: audioApi.ts
raspberry/react-audio-app/src/types/: audio.ts
react-audio-app/: README.md  package.json  setup.sh  tailwind.config.js
react-audio-app/src/: App.tsx
react-audio-app/src/components/: ErrorAlert.tsx  LibraryStats.tsx  PopularTracks.tsx
react-audio-app/src/pages/: Library.tsx  Upload.tsx
